k3s/ingress/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  # tls:
  # - hosts:
  #     - github-hook.distrbyt.dev
  #   secretName: ci-cd-tls
  # - hosts:
  #     - music.distrbyt.dev
  #   secretName: services-tls
  rules:
  # - host: github-hook.distrbyt.com
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: github-hook-service
  #           port:
  #             number: 8001
  - host: music.distrbyt.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: music-service
            port:
              number: 80
